k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: http-error-simulator
  name: http-error-simulator
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app: http-error-simulator
