k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3"
    nginx.ingress.kubernetes.io/proxy-next-upstream-tries: "1"
  creationTimestamp: null
  name: http-error-sim-ingress
  namespace: default
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - backend:
          service:
            name: http-error-simulator
            port:
              number: 80
        path: /($|.*)
        pathType: ImplementationSpecific
